prevents overflow of hamburger menu

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -73,9 +73,8 @@ body {
   }
   .nav > .nav-btn > label {
     display: inline-block;
-    width: 50px;
-    height: 50px;
-    padding: 13px;
+    padding-top:1rem ;
+    padding-right: 1rem;
   }
   .nav > .nav-btn > label:hover,
   .nav #nav-check:checked ~ .nav-btn > label {
